--- a/index.html
+++ b/index.html
@@ -5,62 +5,28 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Slideshow</title>
-
-    <style>
-
-      body { /* Visual */ background: lightgrey;}
-
-      #image-holder {
-
-        /* Positioning */
-         margin: 0 auto;
-
-        /* Box-model */
-        width: 400px;
-
-        /* Typography */
-        text-align: center;
-
-      }
-
-      #buttons {
-
-        /* Positioning */
-        margin: 50px 0;
-
-        /* Typography */
-        text-align: center;
-
-      }
-
-      button {
-
-        /* Box-model */
-        width: 200px;
-        height: 100px;
-
-      }
-
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Trivia Game</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
   </head>
 
   <body>
 
     <div id="buttons">
-      <button id="start"><h2>Start</h2></button>
+      <button id="start"><h2>Start Game</h2></button>
       <button id="stop"><h2>Stop</h2></button>
     </div>
 
     <div id="image-holder"></div>
 
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Script -->
     <script type="text/javascript" src="./assets/js/app.js"></script>
-
   </body>
 
 </html>
