Initial work on timers and intervals.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
 
   <body>
 
-    <div id="buttons">
-      <button id="start"><h2>Start Game</h2></button>
-      <button id="stop"><h2>Stop</h2></button>
-    </div>
+    <div class="content trivia-square">
+      <section id="timer-holder" class="row"></section>
 
-    <div id="image-holder"></div>
+      <section id="question-holder" class="row"></section>
+
+      <div id="start-control" class="row">
+          <button id="start" class="trivia-button col-xs-12 offset-sm-2 col-sm-4 offset-md-4 col-md-4">
+            <h2>Start Trivia Game</h2>
+          </button>
+<!--           <button id="stop" class="trivia-button col-xs-12 col-sm-4 col-md-3"><h2>Stop</h2></button> -->
+      </div>
+
+    </div>
 
 
     <!-- jQuery -->
