Added buttons for each choice.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
   <body>
 
     <div class="content trivia-square">
-      <section id="timer-holder" class="row"></section>
+      <div>
+        <section id="timer-holder" class="row"></section>
+      </div>
 
-      <section id="question-holder" class="row"></section>
+      <section id="question-holder"></section>
+      
+      <section id="image-holder"></section>
 
       <div id="start-control" class="row">
           <button id="start" class="trivia-button col-xs-12 offset-sm-2 col-sm-4 offset-md-4 col-md-4">
