Added initial version of scoreboard feature.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
   <body>
 
     <div class="content trivia-square">
+      <h1 class="text-center">Trivia Game</h1>
       <div>
         <section id="timer-holder" class="row"></section>
       </div>
 
       <section id="question-holder"></section>
-      
+
       <section id="image-holder"></section>
+
+      <section id="score-board"></section>
 
       <div id="start-control" class="row">
           <button id="start" class="trivia-button col-xs-12 offset-sm-2 col-sm-4 offset-md-4 col-md-4">
