Working version of Restart feature.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <section id="image-holder"></section>
 
       <section id="score-board"></section>
+      
+      <section id="restart-section" class="row"></section>
 
       <div id="start-control" class="row">
           <button id="start" class="trivia-button col-xs-12 offset-sm-2 col-sm-4 offset-md-4 col-md-4">
