Added some styling to heading and scoreboard.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -16,7 +17,7 @@
   <body>
 
     <div class="content trivia-square">
-      <h1 class="text-center">Trivia Game</h1>
+      <h1 class="text-center custom-h1">TV Sitcom Trivia Game</h1>
       <div>
         <section id="timer-holder" class="row"></section>
       </div>
