Added more styling and images to style.css.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
     <div class="content trivia-square">
-      <h1 class="text-center custom-h1">TV Sitcom Trivia Game</h1>
+      <h1 class="text-center custom-h1 rainbow-text">TV Sitcom Trivia Game</h1>
       <div>
         <section id="timer-holder" class="row"></section>
       </div>
