Added images to answer section.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
       <section id="question-holder"></section>
 
+      <section id="loading-img"></section>
       <section id="image-holder"></section>
 
       <section id="score-board"></section>
